# stock

./: .gitignore  GITHUB_ACTIONS_SETUP.md  README.md  _compare_v1_v2.py  _http_utils.py  _probe_data.py  _probe_v1.py  announcements.py  backtest_engine.py  capital_flow.py  cleanup_stocks.py  common_utils.py  data_fetcher.py  db.py  factor_model.py  financial.py  import_json.py  institutional.py  market_quote.py  ml_predictor.py  module_a_environment.py  module_b1_shortterm.py  module_b2_longterm.py  module_c_scorecard.py  module_d_riskcontrol.py  news_analyzer.py  portfolio_optimizer.py  prompt.md  pyproject.toml  quant_detector.py  quant_engine.py  requirements.txt  risk_manager.py  sector_rotation.py  selection_factors.html  slow_fetcher.py  stock_mcp_server.py  stock_screener.py  stock_tool.py  sync_institutional_full.py
.github/workflows/: daily-update.yml
faces/: __init__.py  face_capital.py  face_catalyst.py  face_fundamental.py  face_risk.py  face_technical.py  scorecard.py
