[project]
name = "a-share-stock"
version = "1.0.0"
description = "A-Share quantitative analysis MCP server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "curl_cffi",
    "mcp",
    "psycopg2-binary",
    "python-dotenv",
]

[project.scripts]
a-share-stock = "stock_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 根目录下所有 .py 模块 + faces 子包
packages = ["."]
only-include = [
    "stock_mcp_server.py",
    "db.py",
    "_http_utils.py",
    "data_fetcher.py",
    "financial.py",
    "capital_flow.py",
    "announcements.py",
    "market_quote.py",
    "quant_engine.py",
    "backtest_engine.py",
    "risk_manager.py",
    "stock_screener.py",
    "news_analyzer.py",
    "quant_detector.py",
    "slow_fetcher.py",
    "factor_model.py",
    "portfolio_optimizer.py",
    "ml_predictor.py",
    "sector_rotation.py",
    "module_a_environment.py",
    "module_b1_shortterm.py",
    "module_b2_longterm.py",
    "module_c_scorecard.py",
    "module_d_riskcontrol.py",
    "faces/",
]
